# marimo-pca

./: README.md  main.py  pyproject.toml  requirements.txt
src/notebooks/: pca.py
