[project]
name = "marimo-pca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai==1.32.0",
    "marimo[recommended]==0.15.2",
    "numpy==2.3.2",
    "pandas==2.3.2",
    "plotly==6.3.0",
    "scikit-learn==1.7.1",
]

